--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "prettier": "^2.2.1"
   },
   "lint-staged": {
-    "*.{js,css,json,md}": [
-      "prettier --write",
-      "lint"
-    ]
+    "*.{js,css,json,md}": "prettier --write",
+    "*.{js}": "eslint"
   }
 }
