--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   },
   "lint-staged": {
     "*.{js,css,json,md}": "prettier --write",
-    "*.{js}": "eslint"
+    "*.{js}": "eslint --fix"
   }
 }
