--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "repository": "git@github.com:YaHu-Lee/template-tooling.git",
   "author": "YaHu-Lee <lyh990719@gmail.com>",
   "license": "MIT",
-  "dependencies": {
+  "lint-staged": {
+    "*.js": [
+      "eslint",
+      "prettier --write"
+    ]
+  },
+  "devDependencies": {
+    "del": "^6.0.0",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-uglify": "^3.0.2",
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1"
-  },
-  "lint-staged": {
-    "*.{js,css,json,md}": "prettier --write",
-    "*.{js}": "eslint --fix"
   }
 }
